#62 - Fixed margins on flex grid to align items to the left

--- a/src/_sass/base/cards.scss
+++ b/src/_sass/base/cards.scss
@@ -145,6 +145,7 @@
     width: 47%;
     max-width: 47%;
     padding-bottom: 20px;
+    margin: 10px 15px;
   }
 }
 
